 	- use the right timeout for stop processes we fork;
 	- allow services of Type=oneshot that specify no ExecStart= commands;
 	- add support for a configurable system-wide start-up timeout;
 	- print 'startup finished' messages even if we log to console;
 	- introduce "poweroff" as new failure action types;
 	- split up “starting” manager state into “initializing” and “starting”;
 * libsystemd:
 	- don't generate bus-error-mapping.c source file;
 	- split sd-event run into prepare/wait/dispatch;
 	- remove unused call bus_kernel_create_monitor();
 	- split bus_map_all_properties into multiple helpers;
 	- fix use-after-free in slot-release;
 * logind:
 	- add HandleLidSwitchDocked= option to logind.conf + documentation;
 	- fix memory-leak on DropController();
 * units:
 	- order “systemd-fsck@.service” after “local-fs-pre.target”;
 	- remove services: initrd-parse-etc, initrd-cleanup, initrd-switch-root;
 	- remove targets: initrd-fs, initrd-switch-root, initrd-root-fs, initrd;
 * systemctl:
 	- always show legend in list-unit-files, even if we know about no unit files;
 	- correct error message printed when bus_process_wait fails;
 * rpm:
 	- add user macros;
 * shared:
 	- introduce strv_find_startswith() and make use of it;
 	- drop UNIQUE() macro;
 	- make container_of() use unique variable names;
 	- make lookup_uid() global;
 	- fix minimal race where we might miss SIGTERMs when forking off an agent;
 	- use unique variable names for math-macros;
 * po:
 	- update Polish translation;
 	- update Ukrainian translation;
 * tests:
 	- use assert_se in all assertions;
 * build:
 	- add check for gperf lookup function signature;
 	- add missing include “sys/sysmacros.h” header file;
 	- add fallthrough comment to suppress warning;
 * load full selinux db;
 * remove systemd-machine-id-setup program;
 * send STOPPING=1 from our daemons;
 * code optimization;
 
   systemd (214.8)
~~~~~~~
 * core:
 	- remove systemd.confirm_spawn kernel parameter;