@@ -14,6 +14,7 @@ systemd System and Service Manager
  	- print 'startup finished' messages even if we log to console;
  	- introduce "poweroff" as new failure action types;
  	- split up “starting” manager state into “initializing” and “starting”;
+ 	- remove “x-initrd.mount” mount option;
  * libsystemd:
  	- don't generate bus-error-mapping.c source file;
  	- split sd-event run into prepare/wait/dispatch;
